<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:dslv="http://schemas.android.com/apk/res/cop4331.group16.smartnav"
    android:id="@+id/content_wrapper"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="3dp"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/add_wrapper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="5dp" >

        <Button
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="10dp"
            android:text="@string/editButton" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:gravity="right|center"
            android:paddingRight="5dp"
            android:text="@string/toDoText"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/addItemEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:imeOptions="actionGo"
            android:inputType="text"
            android:minWidth="100dp"
            android:singleLine="true" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="10dp"
            android:text="@string/addButton" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:background="@color/gray" />

    <com.mobeta.android.dslv.DragSortListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:dividerHeight="2dp"
        android:padding="3dp"
        dslv:collapsed_height="2dp"
        dslv:drag_enabled="true"
        dslv:drag_scroll_start="0.33"
        dslv:float_alpha="0.6"
        dslv:max_drag_scroll_speed="0.5"
        dslv:slide_shuffle_speed="0.3"
        dslv:track_drag_sort="false"
        dslv:use_default_controller="false" />
    
    <TextView android:id="@android:id/empty"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:gravity="center"
	    android:textColor="#ff0000"
	    android:text="@string/empty_message" />

     <Button
        android:id="@+id/clearAllButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clearAllButton" />
     
    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submitButton" />

</LinearLayout>